--- a/test/expected/inheritance.css
+++ b/test/expected/inheritance.css
@@ -1,16 +1,21 @@
 body {
-  background: pink; }
+  background: pink;
+}
 
 footer {
-  background: red; }
+  background: red;
+}
 
 .error, .badError {
   border: #f00;
-  background: #fdd; }
+  background: #fdd;
+}
 
 .error.intrusion, .intrusion.badError {
   font-size: 1.3em;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .badError {
-  border-width: 3px; }
+  border-width: 3px;
+}
