--- a/test/expected/mixins.css
+++ b/test/expected/mixins.css
@@ -1,8 +1,11 @@
 #data {
   float: left;
-  margin-left: 10px; }
-  #data th {
-    text-align: center;
-    font-weight: bold; }
-  #data td, #data th {
-    padding: 2px; }
+  margin-left: 10px;
+}
+#data th {
+  text-align: center;
+  font-weight: bold;
+}
+#data td, #data th {
+  padding: 2px;
+}
